# docs/swagger.json
@@ -34,23 +34,7 @@
                 }
             }
         },
-        "/c": {
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "summary": "Create bin",
-                "responses": {
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/echo.HTTPError"
-                        }
-                    }
-                }
-            }
-        },
-        "/cl": {
+        "/bins": {
             "get": {
                 "produces": [
                     "application/json"
@@ -72,6 +56,20 @@
                             "$ref": "#/definitions/echo.HTTPError"
                         }
                     },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/echo.HTTPError"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "summary": "Create bin",
+                "responses": {
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
