# internal/api/create_bin_api.go
@@ -21,7 +21,7 @@ type Bin struct {
 // @Accept  json
 // @Header 201 {string} Location "uuid"
 // @Failure 500 {object} echo.HTTPError
-// @Router /c [post]
+// @Router /bins [post]
 func CreateBin(conf *config.App, rd *redis.Client) func(c echo.Context) error {
 	return func(c echo.Context) error {
 		key := uuid.New().String()
